test/types/sync/ferguson/sync-copy-init-cannot-coerce.good
sync-copy-init-cannot-coerce.chpl:3: error: cannot initialize 'sync string' from 'sync int(64)' because 'int(64)' is not coercible to 'string'
note: An additional error is hidden. Use --print-additional-errors to see it.
